# rag-bot

api/: .gitignore  curl.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg
api/src/: __main__.py  app.py  config.py
api/src/models/: chat.py
api/src/routes/: document.py  rag.py  website.py
api/src/services/: chat.py  database.py  indexer.py  rag.py  session.py
api/src/utils/: dependency.py  logger.py  process_file.py  scrape_website.py
app/: app.py  pyproject.toml
server/: flake.nix  main.py  requirements.txt
